# code-dojo-39

./: .gitignore  README.md
cpp/: CMakeLists.txt  Song.cpp  lib.cpp  lib.h  test.sh  test_song.cpp
python/: song.py  song_test.py
